fix: isblank -> isempty